...
        android:layout_marginBottom="30px"
        app:layout_anchor="@+id/constraintLayout"
        app:layout_anchorGravity="center"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_button"
            android:layout_width="295dp"
            android:layout_height="61dp"
            android:text="@string/add_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchView"
            android:fadeScrollbars="false"
            />

        <ListView
            android:id="@+id/item_list"
            android:layout_width="393dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/total_sum"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_list"></ListView>
...
